View history diagnostic of a task